examples/test/testpolicy16221.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16221
  namespace: namespace31
spec:
  podSelector:
    matchLabels:
      key17: value37
      key7: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value16
          key6: value44
      podSelector:
        matchLabels:
          key49: value10
